# harry-potter-chatbot

./: README.md  pdf-reader.py  pyproject.toml  test.py
converted/: extracted_text.txt
documents/: test.mdx  text2.mdx
instance/: users.db
static/: styles.css
templates/: display_image.html  index.html  login.html  register.html
