[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Blake Passe <blakepasse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^4.3.0"
langchain-text-splitters = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
