[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Blake Passe <blakepasse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^4.3.0"
langchain = "0.0.354"
openai = "1.6.1"
datasets = "2.10.1"
pinecone-client = "3.1.0"
tiktoken = "0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
