[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Blake Passe <blakepasse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pypdf = "^4.3.0"
python-dotenv = "^1.0.1"
langchain-community = "^0.2.9"
langchain-pinecone = "^0.1.2"
langchain-openai = "^0.1.17"
unstructured = {extras = ["pdf"], version = "^0.15.0"}
langchain-text-splitters = "^0.2.2"
python-magic = "^0.4.27"
flask = "^3.0.3"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
